# FanSpeedController

./: .gitignore  CMakeLists.txt  README.md
firmware/: CMakeLists.txt  generic_hex.py
firmware/include/: clock_io.h  eeprom.h  platform.h  serial.h  types.h
firmware/source/: clock_io.c  eeprom.c  main.c  platform.c  serial.c
host/: CMakeLists.txt  generate_resource.py
host/include/controller/: board_controller.h
host/include/locale/: string_table.h
host/include/serial/: serial.h
host/include/utils/: utils.h
host/include/view/: firmware_mode_widget.h  generic_operation_widget.h  main_window.h  manual_mode_operation_widget.h  message_widget.h  serial_widget.h  test_mode_operation_widget.h
host/resource/: resources.qrc
host/resource/StringTable/: strings.json
host/source/: main.cc
host/source/controller/: board_controller.cc
host/source/locale/: string_table.cc
host/source/serial/: serial.cc
host/source/view/: firmware_mode_widget.cc  generic_operation_widget.cc  main_window.cc  manual_mode_operation_widget.cc  message_widget.cc  serial_widget.cc  test_mode_operation_widget.cc
include/: command.h
